@@ -174,6 +174,7 @@ Plugins
 |       alias-info.c                | Info and infolists from alias plugin
 |    aspell/                        | Aspell plugin
 |       weechat-aspell.c            | Main aspell functions
+|       weechat-aspell-bar-item.c   | Aspell bar items
 |       weechat-aspell-config.c     | Aspell config options
 |       weechat-aspell-speller.c    | Spellers management
 |    charset/                       | Charset plugin
