@@ -20,6 +20,7 @@
 
 ADD_LIBRARY(aspell MODULE
 weechat-aspell.c weechat-aspell.h
+weechat-aspell-bar-item.c weechat-aspell-bar-item.h
 weechat-aspell-config.c weechat-aspell-config.h
 weechat-aspell-speller.c weechat-aspell-speller.h)
 SET_TARGET_PROPERTIES(aspell PROPERTIES PREFIX "")
