@@ -7,6 +7,7 @@ v0.4.0-dev, 2012-10-06
 Version 0.4.0 (under dev!)
 --------------------------
 
+* aspell: add bar item "aspell_dict" (dictionary used on current buffer)
 * irc: remove unneeded server disconnect when server buffer is closed and server
   is already disconnected
 * relay: add missing "ssl." in output of /relay listrelay
